--- a/fr/index.org
+++ b/fr/index.org
@@ -16,28 +16,14 @@
 #+begin_html
 <script language="Javascript">
 function banner() { } ; b = new banner() ; n = 0
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org-plot1.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org-plot1.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org-R3.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org-R3.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org-spreadsheet-system.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org-spreadsheet-system.jpg' alt='' class='active'/></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/screenshots/org-mode-publishing.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/screenshots/org-mode-publishing.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/worg/images/screenshots/davison-minimal-research.png' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/screenshots/davison-minimal-research.png' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/big-table.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/big-table.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/column-view-big-project.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/column-view-big-project.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org-plot-page-in-worg.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org-plot-page-in-worg.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/bernt3.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/bernt3.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/column-view.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/column-view.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/customize.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/customize.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/using-date-time-charles-cave.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/using-date-time-charles-cave.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/vmap-org-export-to-pdf2.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/vmap-org-export-to-pdf2.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/vmap-org-sources-iimage-mode2.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/vmap-org-sources-iimage-mode2.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/grades.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/grades.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org_andreas.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org_andreas.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/web_site_org_code.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/web_site_org_code.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/org-mode-zenburn.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/org-mode-zenburn.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/weekly-agenda-view-zenburn.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/weekly-agenda-view-zenburn.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/david_o_toole.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/david_o_toole.jpg' alt='' /></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/orgmode-inlinetasks.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/orgmode-inlinetasks.jpg' alt='' class='active'/></a>"
-b[n++]= "<a href='http://orgmode.org/img/screenshots/clocking-and-overlays.jpg' rel='lightbox'><img class='random' src='http://orgmode.org/img/screenshots/clocking-and-overlays.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/1.jpg' title='Fichier Org mode avec Timeline' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/1.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/2.jpg' title='Org mode permet de manipuler des tableaux facilement' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/2.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/3.jpg' title='Les vues Agenda pour votre fichier Org' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/3.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/4.jpg' title='Integration d'Org mode et du calendrier Emacs' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/4.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/5.jpg' title='Exporter un fichier Org mode en HTML' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/5.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/6.jpg' title='Exporter un fichier Org mode en LaTeX' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/5.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/7.jpg' title='Org mode: définir des dates et des échéances' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/6.jpg' alt='' /></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/orgweb/8.jpg' title='Org mode: gérer des listes TODO' rel='lightbox'><img class='random' src='http://orgmode.org/worg/images/orgweb/7.jpg' alt='' /></a>"
 i=Math.floor(Math.random() * n) ;
 document.write( b[i] )
 </script>
