--- a/ja/org-mode-links.org
+++ b/ja/org-mode-links.org
@@ -10,7 +10,7 @@
 
 * Org-modeについての講演
 
-GoogleTech talk と [[http://www.nf.mpg.de/index.php?L%3D1][Max Planck Institute for Neurological Research]] にて、Carsten Dominik 氏が Org-mode について講演しました。FLOSS ウィークリィ [[http://twit.tv/floss136][show number 136]] では、Randal Schwartz氏が、Carsten Dominik 氏へ、Org-mode についてのインタビューを行いました。
+GoogleTech talk と [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]] にて、Carsten Dominik 氏が Org-mode について講演しました。FLOSS ウィークリィ [[http://twit.tv/floss136][show number 136]] では、Randal Schwartz氏が、Carsten Dominik 氏へ、Org-mode についてのインタビューを行いました。
 
 [[http://fosdem.org/2011/][FOSDEM 2011]] にて、Bastien 氏が Org-mode についてのプレゼンテーションを行いました（Stefan Vollmar 氏による研究室内での利用例と、Sébastien Vauban 氏による Org Babel のプレゼンを含む）。プレゼンテーションのスライドを [[http://lumiere.ens.fr/~guerry/u/org-fosdem-presentation-beamer.pdf][PDF]] で入手できます。2011年8月に、Bastien 氏は、パリで開催された GNU Hackers Meeting でも同じプレゼン（一部更新あり）を行いました。
 
