[ja] Fix a file link

--- a/ja/org-mode-news.org
+++ b/ja/org-mode-news.org
@@ -13,7 +13,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
-- <2011-12-12> バージョン 7.8、7.8.01、7.8.02 を公開（[[file:/orgmode.org/Changes.html][変更点]）
+- <2011-12-12> バージョン 7.8、7.8.01、7.8.02 を公開（[[file:orgmode.org/Changes.html][変更点]]）
 - <2011-12-12> ウェブサイトのデザインとコンテンツを更新
 - <2011-12-02> Worg の Git リポジトリを [[http://orgmode.org/w/worg.git][orgmode.org]] でホスティング開始
 - <2011-07-28> バージョン 7.7 を公開
