[ja] Revise translation

--- a/ja/org-mode-download.org
+++ b/ja/org-mode-download.org
@@ -8,25 +8,25 @@
 #+STYLE:     <link rel="icon" type="image/png" href="org-mode-unicorn.png" />
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
-* 最新のバージョン：Org 7.8.02
+* 現在の最新バージョン：Org 7.8.02
 
-最新のバージョンは、7.8.02 です。最近のリリースで加えられた変更点は、[[http://orgmode.org/Changes.html][こちら]] のリストを見てください。
+現在の最新バージョンは、7.8.02 です。最近のリリースで加えられた変更点は、[[http://orgmode.org/Changes.html][こちら]] のリストを見てください。
 
-Org-mode は、GNU Emacs 24、23、22で動作します。XEmacs 21でも動作しますが、若干の制限があります。Emacs 22.2 には、バージョン 4.67d の Org-mode が含まれています。また、Emacs 23.1 には、6.21b が含まれています。Emacsの最新の開発版には、通常、ほぼ最新の Org-mode が含まれています。ただし、Org-mode のサイトで頒布するバージョンからは、少し遅れているかもしれません。
+Org-modeは、GNU Emacs 24、23、22 で動作します。XEmacs 21 でも動作しますが、若干の制限があります。Emacs 22.2 には、バージョン 4.67d の Org-mode が含まれています。また、Emacs 23.1 には、6.21b が含まれています。Emacsの最新の開発版には、通常、ほぼ最新の Org-mode が含まれています。ただし、Org-mode のサイトから頒布されるパッケージからは、少し遅れているかもしれません。
 
 * ダウンロード
 
 ** 安定版
 
-[[http://orgmode.org/org-7.8.02.zip][zip形式]] もしくは、[[http://orgmode.org/org-7.8.02.tar.gz][tarball形式]] の圧縮ファイルをダウンロードしてください。これらの圧縮ファイルには、 Lispファイル群( =org*.el= )とPDFおよび (Tex)Info 形式のドキュメントが含まれます。続いて、[[http://orgmode.org/manual/Installation.html#Installation][インストール]] と[[http://orgmode.org/manual/Activation.html#Activation][アクティベーション]] を読んでください。
+[[http://orgmode.org/org-7.8.02.zip][zip形式]]もしくは、[[http://orgmode.org/org-7.8.02.tar.gz][tarball形式]]の圧縮ファイルをダウンロードしてください。これらの圧縮ファイルには、 Lispファイル群( =org*.el= )とPDFおよび (Tex)Info 形式のドキュメントが含まれます。続いて、[[http://orgmode.org/manual/Installation.html#Installation][インストール]]と[[http://orgmode.org/manual/Activation.html#Activation][アクティベーション]]を読んでください。
 
 ** 開発版
 
-Git を使って、最新の開発版を入手できます。これまでにリリースしたすべてのバージョンが頒布されています。Git リポジトリは[[http://orgmode.org/w/org-mode.git][オンラインで閲覧]] できます。また、いつでもリポジトリの[[http://orgmode.org/w/org-mode.git/snapshot][スナップショット]] をダウンロードできます。リポジトリのローカルクローンを作るには、コマンドラインで次を実行してください。
+Git を使って、最新の開発版を入手できます。これまでにリリースしたすべてのバージョンが頒布されています。Git リポジトリは[[http://orgmode.org/w/org-mode.git][オンラインで閲覧]]できます。また、いつでもリポジトリの[[http://orgmode.org/w/org-mode.git/snapshot][スナップショット]]をダウンロードできます。リポジトリのローカルクローンを作るには、コマンドラインで次を実行してください。
 
 : git clone git://orgmode.org/org-mode.git
 
-より詳しい情報は、[[http://orgmode.org/worg/org-faq.php][よくある質問]] の [[http://orgmode.org/worg/org-faq.php#keeping-current-with-Org-mode-development]["How do I keep current with Org mode development?"]] にあります。Git を利用しないユーザのために、[[http://orgmode.org/org-latest.zip][zip形式]] と [[http://orgmode.org/org-latest.tar.gz][tarball形式]] でスナップショットを提供します。これらは毎日更新され、Gitリポジトリの最新版に対応しています。別の方法として、orgmode.orgのサーバから[[http://orgmode.org/w/org-mode.git/snapshot][tarball形式]] のスナップショットをダウンロードできます。
+より詳しい情報は、[[http://orgmode.org/worg/org-faq.php][よくある質問]]の [[http://orgmode.org/worg/org-faq.php#keeping-current-with-Org-mode-development]["How do I keep current with Org mode development?"]] にあります。Git を利用しないユーザのために、[[http://orgmode.org/org-latest.zip][zip形式]]と[[http://orgmode.org/org-latest.tar.gz][tarball形式]]のスナップショットも提供します。これらは毎日更新され、Git リポジトリの最新版に対応しています。別の方法として、orgmode.org のサーバから[[http://orgmode.org/w/org-mode.git/snapshot][tarball形式]]のスナップショットをダウンロードできます。
 
 ** その他の入手方法
 
