--- a/ja/org-mode-documentation.org
+++ b/ja/org-mode-documentation.org
@@ -10,11 +10,11 @@
 
 * Org-mode のガイドとマニュアル
 
-- [[http://orgmode.org/guide/index.html][オンラインコンパクトガイド]] を読むか、[[http://orgmode.org/orgguide.pdf][PDF]] をダウンロードする。このコンパクトガイドは、40ページ程度にまとめられた Org-mode の概要です。すべての機能を簡潔に網羅していて、マニュアルとウェブの詳細な資料へのリンクが載せられています。
+- [[http://orgmode.org/guide/index.html][オンラインのコンパクトガイド]]を読むか、[[http://orgmode.org/orgguide.pdf][PDF]] をダウンロードする。このコンパクトガイドは、40ページ程度にまとめられたOrg-modeの概要です。すべての機能を簡潔に網羅していて、マニュアルとウェブの詳細な資料へのリンクが載せられています。
 
-- [[http://orgmode.org/manual/index.html][オンラインマニュアル]] を読む。マニュアルは、すべての機能を解説しています。あまり役立たないかもしれない情報も含んでいますが、体系的にまとめられています。主要な構造がコンパクトガイドと一致しているので、基本的な説明と詳細な記述を気軽に移動できます。
+- [[http://orgmode.org/manual/index.html][オンラインのマニュアル]]を読む。マニュアルは、すべての機能を解説しています。あまり役立たないかもしれない情報も含んでいますが、体系的にまとめられています。主要な構造がコンパクトガイドと一致しているので、基本的な説明と詳細な記述を気軽に行き来できます。
 
-- マニュアルのすべてを [[http://orgmode.org/org.html][一つのファイル]] で読む。
+- マニュアルのすべてを[[http://orgmode.org/org.html][一つのファイル]]で読む。
 
   #+begin_html
   <a href="http://www.network-theory.co.uk/org/manual/">
@@ -26,7 +26,7 @@
 
 - 約200ページにおよぶ [[http://orgmode.org/org.pdf][PDF]] をダウンロードする。
 
-- ペーパーバック版のマニュアルを[[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]] で購入する。一冊販売されると、そのうち1ドルが Org-mode プロジェクトに寄付されます。
+- ペーパーバック版のマニュアルを [[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]] で購入する。一冊販売されると、そのうち1ドルが Org-mode プロジェクトに寄付されます。
 
 - マニュアルの翻訳：
   - Takeshi Okano氏による[[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][日本語翻訳 (4.60)]]
@@ -34,10 +34,10 @@
     
 * Org-mode のリファレンスカード
   - [[http://orgmode.org/orgcard.pdf][PDF]] のリファレンスカードをダウンロードする
-  - [[http://orgmode.org/orgcard.txt][テキスト版]] をダウンロードする
+  - [[http://orgmode.org/orgcard.txt][テキスト版]]をダウンロードする
 
 * よくある質問
-  - Org-mode の [[http://orgmode.org/worg/org-faq.php][よくある質問]] は、ユーザ自身が編集でき、[[http://orgmode.org/worg/][Worgプロジェクト]] でコミュニティが管理しています。
+  - Org-modeの[[http://orgmode.org/worg/org-faq.php][よくある質問]]は、ユーザ自身が編集でき、[[http://orgmode.org/worg/][Worgプロジェクト]]でコミュニティによって管理されています。
 
 * チュートリアル
-  - [[http://orgmode.org/worg/org-tutorials/index.php][チュートリアルとスクリーンキャスト]] の完全なリストが [[http://orgmode.org/worg][Worgプロジェクト]] で管理されています。
+  - [[http://orgmode.org/worg/org-tutorials/index.php][チュートリアルとスクリーンキャスト]]の完全なリストが、[[http://orgmode.org/worg][Worgプロジェクト]]で管理されています。
