--- a/ja/index.org
+++ b/ja/index.org
@@ -7,6 +7,7 @@
 #+STYLE:     <base href="http://orgmode.org/ja/" />
 #+STYLE:     <link rel="icon" type="image/png" href="org-mode-unicorn.png" />
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/css/lightbox.css" type="text/css" />
+#+STYLE:     <link rel="publisher" href="https://plus.google.com/102778904320752967064" />
 
 * Org: ノート、計画、編集のための Emacs モード
 
